Fix layout: footer visible on homepage, search page scrollable (#33)

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,9 @@ html {
 
 body {
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
@@ -35,7 +38,6 @@ body {
 }
 
 .results {
-  position: absolute;
   margin-top: 2px;
   margin-left: 90px;
 }
@@ -738,7 +740,7 @@ legend {
 }
 
 .s129 {
-  min-height: 100vh;
+  flex: 1;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
